feat: initial commit

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -18,7 +18,8 @@ modules:
   #       destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
   
   - type: dnf
-    install:
+    group-install:
+      with-optional: true
       packages:
         - cosmic-desktop
 
