feat: remove firefox

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -22,6 +22,10 @@ modules:
       with-optional: true
       packages:
         - cosmic-desktop
+    remove:
+      packages:
+        - firefox
+        - firefox-langpacks
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
 
