--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -44,6 +44,13 @@ modules:
         - firefox
         - firefox-langpacks
   
+  - type: default-flatpaks
+    notify: true
+    user:
+      repo-url: https://dl.flathub.org/repo/flathub.flatpakrepo
+      repo-name: flathub
+      repo-title: Flathub
+  
   - type: systemd
     system:
       disabled:
