feat: adding fonts and uupd package

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -64,6 +64,10 @@ modules:
   - type: script
     snippets:
       - "sed -i 's/AutomaticUpdatePolicy=.*/AutomaticUpdatePolicy=none/g' /etc/rpm-ostreed.conf" # Disable automatic updates per uupd instructions
+      - "mv /usr/share/fonts/google-fonts/Roboto/ /usr/share/fonts/"
+      - "mv /usr/share/fonts/google-fonts/Roboto\ Mono/ /usr/share/fonts/"
+      - "mv /usr/share/fonts/google-fonts/Roboto\ Serif/ /usr/share/fonts/"
+      - "rm -rf /usr/share/fonts/google-fonts"
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
 
