--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -38,8 +38,18 @@ modules:
         - fuse-encfs
         - gnome-disk-utility
         - iwd
+        - podman-compose
         - powertop
         - pulseaudio-utils
+        - qemu
+        - qemu-char-spice
+        - qemu-device-display-virtio-gpu
+        - qemu-device-display-virtio-vga
+        - qemu-device-usb-redirect
+        - qemu-img
+        - qemu-system-x86-core
+        - qemu-user-binfmt
+        - qemu-user-static
         - samba
         - setools-console
         - uupd
