--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -98,6 +98,8 @@ modules:
   - type: script
     snippets:
       - "sed -i 's/AutomaticUpdatePolicy=.*/AutomaticUpdatePolicy=none/g' /etc/rpm-ostreed.conf" # Disable automatic updates per uupd instructions
+      - "curl -s https://raw.githubusercontent.com/ublue-os/bluefin/refs/heads/main/system_files/shared/usr/bin/podman-host -o /usr/bin/podman-host"
+      - "chmod +x /usr/bin/podman-host"
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
 
