--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -65,7 +65,6 @@ modules:
       repo-name: flathub
       repo-title: Flathub
       install:
-        - best.ellie.StartupConfiguration
         - com.github.PintaProject.Pinta
         - com.github.iwalton3.jellyfin-media-player
         - com.github.tchx84.Flatseal
@@ -75,6 +74,7 @@ modules:
         - com.visualstudio.code
         - dev.heppen.webapps
         - io.github.dvlv.boxbuddyrs
+        - io.github.flattool.Ignition
         - io.github.flattool.Warehouse
         - io.missioncenter.MissionCenter
         - io.podman_desktop.PodmanDesktop
